<resources>
    <string name="app_name">Spirulina</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password???</string>
    <string name="sign_in">Sign In</string>
    <string name="to_sign_up">Don\'t have account yet?</string>
    <string name="or_login">Or Login</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="to_sign_in">Already have account???</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_location">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification">Có thể thu hoạch!!!</string>
    <string name="system_control">Điều khiển thiết bị</string>
    <string name="system_parameter">Thông số dàn tảo</string>

    <string name="menu_item_about">About App</string>
    <string name="about_app_version">App Version: %s</string>
    <string name="about_esptouch_version">EspTouch Version: %s</string>
    <string name="ssid_title">SSID: </string>
    <string name="bssid_title">BSSID: </string>
    <string name="password_title">Password: </string>
    <string name="device_count_title">Device count: </string>
    <string name="package_broadcast">Broadcast</string>
    <string name="package_multicast">Multicast</string>
    <string name="confirm">Confirm</string>
    <string name="wifi_5g_message">Device don\'t support 5G Wifi, please make sure the currently connected Wifi is 2.4G</string>
    <string name="location_disable_message">Location(GPS) is disable</string>
    <string name="no_wifi_connection">No Wifi connection</string>
    <string name="configuring_message">Esptouch is configuring, please wait for a moment…</string>
    <string name="configure_wifi_change_message">Wifi disconnected or changed</string>
    <string name="configure_result_failed">EspTouch failed</string>
    <string name="configure_result_failed_port">Create Esptouch task failed, the EspTouch port could be used by other thread</string>
    <string name="configure_result_success">EspTouch 完成</string>
    <string name="configure_result_success_item">BSSID = %1$s, InetAddress = %2$s</string>
</resources>
